--- a/CAPSTONE1/WEB DEMO/index.html
+++ b/CAPSTONE1/WEB DEMO/index.html
@@ -20,7 +20,6 @@ anim id.          </span> <br><br>
                 <button id="d113">App Store</button>
                    </div>
                    <div id="d11b"></div>
-
                 </div>
                 <div id="d12">
                     <i class="fa-solid fa-code" style="color: #4bd266;" id="d5"></i><br>
@@ -28,7 +27,7 @@ anim id.          </span> <br><br>
                     <span id="p1">
                         <p class="p11">Duis aute irure dolor in reprehendent in </p>
                         <p class="p21">voluptate velit esse  cillum dolore eu fugiat nulla</p>
-                        <p class="p31">pariatur excepteur sint mollit anim id.</p>
+                        <p class="p11">pariatur excepteur sint mollit anim id.</p>
                     </span>
                 </div>
              </div>
@@ -37,27 +36,27 @@ anim id.          </span> <br><br>
                     <i class="fa-solid fa-radio" id="d51"></i><br>
                     <b id="b2">Web Design</b><br>
                     <span id="p2">
-                        <p class="p61">Duis aute irure dolor in reprehendent in </p>
+                        <p class="p11">Duis aute irure dolor in reprehendent in </p>
                         <p class="p62">voluptate velit esse  cillum dolore eu fugiat nulla</p>
-                        <p class="p63">pariatur excepteur sint mollit anim id.</p>
+                        <p class="p11">pariatur excepteur sint mollit anim id.</p>
                     </span>
                 </div>
                 <div id="d22">
                     <i class="fa-solid fa-music" id="d52"></i><br>
                     <b id="b3">Development</b><br>
                     <span id="p3">
-                        <p class="p61">Duis aute irure dolor in reprehendent in </p>
+                        <p class="p11">Duis aute irure dolor in reprehendent in </p>
                         <p class="p62">voluptate velit esse  cillum dolore eu fugiat nulla</p>
-                        <p class="p63">pariatur excepteur sint mollit anim id.</p>
+                        <p class="p11">pariatur excepteur sint mollit anim id.</p>
                     </span>
                 </div>
                 <div id="d23">
                     <i class="fa-solid fa-volume-high" id="d53"></i><br>
                     <b id="b4">Branding</b><br>
                     <span id="p4">
-                        <p class="p61">Duis aute irure dolor in reprehendent in </p>
+                        <p class="p11">Duis aute irure dolor in reprehendent in </p>
                         <p class="p62">voluptate velit esse  cillum dolore eu fugiat nulla</p>
-                        <p class="p63">pariatur excepteur sint mollit anim id.</p>
+                        <p class="p11">pariatur excepteur sint mollit anim id.</p>
                     </span>
                 </div>
              </div>
@@ -68,14 +67,28 @@ anim id.          </span> <br><br>
                     <div id="di111"></div>
                     <div id="di111a"></div>
                 </div>
-                <div id="di12">
+                <div id="di12"><br><br>
                     <b id="a">Strategic Planning</b><br>
                     <p id="b">EVitae suscipit tellus mauris adiam<br id="c"> maecenas sed enim
                         ut.Mauris augue neque<br id="c"> gravidain fermentum.Praesent<br id="c">
                         semper feugiat <br id="c">nibh sed pulvinar proin.</p>
                 </div>
             </div>
-            <div id="di2"> </div>
+            <div id="di2">
+                <div id="di22">
+                    <div id="di222">
+                        <div id="di222a">
+                            <div id="di222a1"></div>
+                            <div id="di222a2"><br><br>
+                                <b id="a2">App Development</b><br><br>
+                                <p>Develop an on-demand app for your<br>
+                                   delivery business to reach your targeted<br>
+                                    customers without any interruption</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="div3">
             <div id="pg3"><br>
