--- a/CAPSTONE1/WEB DEMO/index.html
+++ b/CAPSTONE1/WEB DEMO/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <center>
         <div class="div1">
             <div id="d1">
                 <div id="d11"><br>
@@ -279,5 +280,6 @@ anim id.          </span> <br><br>
                 </p>
             </div>
         </div>
+    </center>
 </body>
 </html>
